QmlCompiler: Handle scripts as type lookups on GetLookup

This can happen if you lookup a script from a type namespace. The type
lookup already has facilities for handling (or rather rejecting) it.

Fixes: QTBUG-123050
Change-Id: I092b1d2f47edc152b4f3967b4eaf4620a81ce5ef
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
Reviewed-by: Olivier De Cannière <olivier.decanniere@qt.io>
(cherry picked from commit 0d1462b3ae8b7cf7975828afc6009d6934c20608)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 8f7ee940d7a8ff72a8c3363f422700251a26d2f3)