src/qmlcompiler/qqmljscodegenerator.cpp
@@ -1016,6 +1016,7 @@ void QQmlJSCodeGenerator::generate_GetLookup(int index)
     }
     case QQmlJSRegisterContent::ScopeAttached:
     case QQmlJSRegisterContent::Singleton:
+    case QQmlJSRegisterContent::Script:
     case QQmlJSRegisterContent::MetaType: {
         generateTypeLookup(index);
         return;
