tests/auto/qml/qmlcppcodegen/data/NotificationItem.qml
@@ -1,0 +1,7 @@
+import QtQml
+import TestTypes as MobileShell
+
+QtObject {
+    id: notificationItem
+    objectName: MobileShell.NotificationsUtils.determineNotificationHeadingText(notificationItem)
+}
